# flareon2025

./: .gitmodules  README.md
task5/: disasm_min.py
task5/analyzer/: CMakeLists.txt  main.cpp  util.h
task7/: ida_disasm_to_file.py  ida_taint1.py  ida_taint_nop.py
task7/servers/server_8000/: server_8000.py
task7/servers/server_8080/: server_8080.py
task8/: FlareAuthenticator.exe.1672.tag
task8/decompiled/: fetch_input1.cpp  fetch_input2.cpp  fetch_input_before.cpp
task8/dumper/: CMakeLists.txt  main.cpp
task8/ida_scripts/: ida_force_linear.py  ida_patch_calls.py  ida_patch_jumps.py  ida_resolve_indirect.py
task8/tracelogs/0_default/: FlareAuthenticator.exe.tag
task8/tracelogs/1_filtered/: FlareAuthenticator.exe.tag
task8/tracelogs/2_filtered_args/: FlareAuthenticator.exe.tag
task8/tracelogs/3_with_csv_args/: FlareAuthenticator.exe.tag
task8/tracelogs/4_with_indirect_calls/: FlareAuthenticator.exe.tag
task8/tracelogs/6_dumped_values1/: FlareAuthenticator.exe.tag
task8/z3_solver/: t8_sol.py
task9/: resolved_order.txt
task9/dependencies/: CMakeLists.txt
task9/disasm-cli/: CMakeLists.txt  main.cpp
task9/disasm_wrapper/: FuncTypes.py  disasm_wrapper.py  parse_func_args.py  run_wrapper.py
task9/dll_order/: CMakeLists.txt  main.cpp  util.h
task9/dump_dlls/: aplib_decompress.py  remove_name_part.py  remove_name_part.py.bak  rename_dlls.py  requirements.txt
task9/loader/: CMakeLists.txt
task9/loader/loader/: CMakeLists.txt  main.cpp  util.h
task9/operations/: CMakeLists.txt  dll_deps.h  ffuncs.h  inverse.h  main.cpp  matrix_exp.h  order.h  parse_records.cpp  parse_records.h  util.h  verif.h
task9/scripts/: MatrixMod4x4.py  solve.py
